Fix issue with text overflowing and minor styling changes

--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,7 @@ body {
   align-items: center;
   background-color: ivory;
   margin: none;
-  font-family: "Playfair", sans-serif;
-}
-
-h1 {
-  margin-top: 250px;
-  font-size: 50px;
-  margin-bottom: 2em;
+  font-family: "Helvetica", sans-serif;
 }
 
 #calc {
@@ -20,6 +14,7 @@ h1 {
   display: flex;
   flex-direction: column;
   color: black;
+  margin-top: 400px;
   justify-content: space-evenly;
   min-width: 300px;
   height: 400px;
@@ -32,11 +27,11 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100px;
+  height: 90px;
   border: 1px solid black;
   color: black;
   text-align: end;
-  font-size: 30px;
+  font-size: 26px;
   background-color: buttonface;
   padding-bottom: 5px;
   padding-top: 5px;
@@ -45,7 +40,14 @@ h1 {
 }
 
 #results {
-  font-size: 20px;
+  font-size: 15px;
+  word-wrap: break-word;
+  max-width: 300px;
+}
+
+#main_display,
+#results {
+  word-wrap: break-word;
 }
 
 .calc_row,
@@ -59,7 +61,7 @@ h1 {
 }
 
 button {
-  font-size: 30px;
+  font-size: 25px;
   border: 1px solid black;
   transition: background-color 0.1s;
   min-width: 80px;
@@ -79,7 +81,8 @@ button:hover {
 }
 
 .AC {
-  background-color: red;
+  background-color: #ef0000;
+  font-weight: 550;
 }
 
 #clear {
